tests/gen-derivation/derivation/core/norec t-pi->.. noext 004/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Only applications to non-polymorphic type constructors are supported at the moment

DerivedGen:11:39--11:46
 07 | %language ElabReflection
 08 | 
 09 | -- isn't one of the arguments an index, not a param? Like for `Equal` type, recursively
 10 | data X : Bool -> Bool -> Type where
 11 |   X0 : (b1 : Bool) -> (b2 : Bool) -> (b1 = b2) -> X b1 b2
                                            ^^^^^^^

